MDEV-34580 Assertion `(key_part->key_part_flag & 4) == 0' failed key_hashnr

The patch for MDEV-34417 erroneously assumed in DBUG_ASSERT() that BNLH joins
cannot be used on prefix indexes. In fact, BNHL can work with prefix indexes,
but the tests did not cover this scenario.

Fixing the asserts from "the key part does not have prefix segments" to
"the key value does not need truncation".